--- a/js/fancybox/jquery.fancybox-1.3.1.css
+++ b/js/fancybox/jquery.fancybox-1.3.1.css
@@ -71,7 +71,7 @@
 	top: 0;
 	left: 0;
 	margin: 0;
-	padding: 20px;
+	padding: 0px;
 	z-index: 1101;
 	display: none;
 }
@@ -80,7 +80,7 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background: #FFF;
+	background: transparent;
 }
 
 #fancybox-inner {
@@ -93,6 +93,7 @@
 	margin: 0;
 	outline: none;
 	overflow: hidden;
+	background: transparent;
 }
 
 #fancybox-hide-sel-frame {
